# TABLE_GENERATOR

./: .gitignore  CMakeLists.txt  README.md  courses.txt  package-lock.json  tag_parser.cpp
docs/: TableGenerator.md
include/: course.h  course_db.h  display.h  display_helper.h  header.h  parser.h  schedule_management.h  table.h  table_db.h  table_generator.h  user.h
src/: main.cpp  parser.cpp  table.cpp  table_db.cpp  table_generator.cpp  tables.txt
src/course_db/: course.cpp  course_db.cpp
src/display/: display.cpp  display_helper.cpp
src/table_db/: table.cpp  table_db.cpp
